reval.org save-window-excursion doesn't save-excursion apparently
There is a case where if you have two emacs windows open pointing to
the same buffer in a small enough window then the original indow from
which reval-update-simple is run may also be the window in which
reaval-audit is displayed, if this happens, then deletion and
insertion step happen at the cursor location in the second buffer
window rather than the position of the buffer where the command was
originally run (this is probably a bug in emacs). It seems that
wrapping the window excursion in save-excursion prevents this.

--- a/README.org
+++ b/README.org
@@ -2594,7 +2594,7 @@ Therefore, since =:cache yes= by itself is a dead end for ensuring that function
 is always available any time a file is loaded there are a couple of options.
 1. Persist to =init.el=. This is evil.
 2. Request to tangle and install as package.
-   A variant of this is simply to use packages.el to install
+   A variant of this is simply to use package.el to install
    the desired functionality in a persistent way in combination
    with accept klobbering.
 3. Figure out how to transparently wrap an elisp block in =unless=.
