orgware.org require ol and add nongnu to package archives
update orgstrap block checksum

--- a/orgware.org
+++ b/orgware.org
@@ -1,4 +1,4 @@
-# -*- orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; orgstrap-block-checksum: 4d51b7433c39407a7c9b09b016bbabbe37c043865db8a8fa7bd51fe86bb823b4; -*-
+# -*- orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; orgstrap-block-checksum: 26fb17ddebefbe150203f2b8d0975e05b25742c673ee9af49a028c7b15171a96; -*-
 # [[orgstrap][jump to the orgstrap block for this file]]
 #+title: Orgware: Tooling for interactive Org files
 
@@ -210,8 +210,8 @@ NOTE: `undo-fu' is required for Emacs < 28."
   (setq-local mouse-wheel-progressive-speed nil)
   (setq-local mouse-wheel-scroll-amount '(3 ((shift) . hscroll)))
 
-  ;; Mouse on scroll bar behavior
-  ;; TODO this is not quite right
+  ;; Mouse on scroll bar behavior TODO this is not quite right, but I
+  ;; have no idea how to get emacs to stop resizing the sliders
   (global-unset-key [vertical-scroll-bar mouse-1])
   (global-set-key [vertical-scroll-bar down-mouse-1] 'scroll-bar-drag)
 
@@ -258,6 +258,8 @@ See the ~isearch-tool-bar-map~ for an example of how to do this.
 #+name: ow-buttons
 #+begin_src elisp
 ;; don't export buttons
+
+(require 'ol)
 
 (defun ow-link-no-export (path desc format)
   "Return nothing for export" ; FIXME broken ???
@@ -321,13 +323,14 @@ See the ~isearch-tool-bar-map~ for an example of how to do this.
 #+name: &ow-package
 #+begin_src elisp
 (defvar ow-package-archives '(("melpa" . "https://melpa.org/packages/")
+                              ("nongnu" . "https://elpa.nongnu.org/nongnu/")
                               ("org" . "https://orgmode.org/elpa/")))
 
 (defun ow-enable-use-package ()
   "Do all the setup needed `use-package'.
 This needs to be called with (eval-when-compile ...) to the top level prior
 to any use of `use-package' otherwise it will be missing and fail"
-  ;; package archives is not an argument to this function to ensure that
+  ;; package-archives is not an argument to this function to ensure that
   ;; there is only one place that needs to be updated if an archive location
   ;; changes, namely this library, updating that is easier to get right using
   ;; the `reval-update' machinery
