reval.org first pass implementation of the cache

--- a/reval.org
+++ b/reval.org
@@ -10,7 +10,7 @@ to use reval and then save the buffer to disk and the load or whether
 it makes more sense to use reval to get securl and then use securl to
 get the sources. Unless securl is going to be used for something else
 it seems more practical to reval-into-reload, or even just reload to
-get the cache benifit in addition to being able to resolve xrefs.
+get the cache benefit in addition to being able to resolve xrefs.
 
 At the moment the serialization of the whole file is used rather than
 one of the normalized prp variants. This might be added in the future,
@@ -37,7 +37,7 @@ can be updated automatically by reval, use the URL: header to
 point to a url that resolves to the Latest-Version of the
 while it would be nice to use a Latest-Version: header directly
 using URL: simplifies the implementation immensely. Note that
-~pacakge-buffer-info~ only returns the first occurance of URL:
+~pacakge-buffer-info~ only returns the first occurrence of URL:
 or Homepage: so the Latest-Version url must come first. Other
 urls can be listed later but will not be included in the parse.
 
@@ -157,8 +157,10 @@ This will be a common starter block for orgstrap.
 #+name: reval-minimal-block
 #+begin_src elisp :noweb no-export
 (unless (featurep 'reval)
+  (defvar reval-cache-directory (concat user-emacs-directory "reval/cache/"))
   <<reval-minimal>>
-  (defalias 'reval #'reval-minimal))
+  (defalias 'reval #'reval-minimal)
+  (reval ? ? "~/git/orgstrap/reval.el"))
 #+end_src
 
 A note on how reval-minimal is different from regular reval.
@@ -171,20 +173,44 @@ something is wrong enough that users that don't have the full
 version installed already are unlikely to be able to debug the
 issue on their own
 
+*BIG NOTE ON CACHING* ~reval-minimal~ by itself leaks information when
+it is used. Therefore the FIRST AND LAST CALL to ~reval-minimal~
+should be to retrieve and evaluate an elisp file that contains version
+of ~reval~ that caches retrieved files so that network traffic cannot
+be used to reveal when someone is running a file that uses ~reval~.
+
+As much as we want to keep this simple, ~reval-minimal~ must implement
+caching so that ~reval.el~ itself can be cached and make use of all
+the usual machinery for updates etc. Thus we trade off a bit of
+complexity in the implementation of ~reval-minimal~ for massively
+reduced complexity everywhere else.
+
 #+name: reval-minimal
 #+begin_src elisp
-(defun reval-minimal (cypher checksum path-or-url &rest _alts)
+(defun reval-minimal (cypher checksum path-or-url &rest alternates)
   "Simplified and compact implementation of reval."
-  (let ((o url-handler-mode))
+  (let* ((o url-handler-mode)
+         (csn (symbol-name checksum))
+         (cache-path (concat reval-cache-directory (substring csn 0 2) "/" csn)))
     (url-handler-mode)
     (unwind-protect
-        (when (file-exists-p path-or-url)
-          (let* ((buffer (find-file-noselect path-or-url))
-                 (buffer-checksum (intern (secure-hash cypher buffer))))
-            (if (eq buffer-checksum checksum)
-                (eval-buffer buffer)
-              (kill-buffer buffer) ; kill so cannot accidentally evaled
-              (error "reval: checksum mismatch! %s" path-or-url))))
+        (cl-loop for path-or-url in (cons cache-path (cons path-or-url alternates))
+                 do (when (file-exists-p path-or-url)
+                      (let* ((buffer (find-file-noselect path-or-url))
+                             (_ (when (string= path-or-url cache-path)
+                                  (with-current-buffer buffer (emacs-lisp-mode))))
+                             (buffer-checksum (intern (secure-hash cypher buffer))))
+                        (if (eq buffer-checksum checksum)
+                            (progn
+                              (unless (string= path-or-url cache-path)
+                                (let ((parent-path (file-name-directory cache-path)))
+                                  (unless (file-directory-p parent-path)
+                                    (make-directory parent-path t))
+                                  (with-current-buffer buffer
+                                    (write-file cache-path))))
+                              (eval-buffer buffer))
+                          (kill-buffer buffer) ; kill so cannot accidentally evaled
+                          (error "reval: checksum mismatch! %s" path-or-url)))))
       (unless o
         (url-handler-mode 0)))))
 #+end_src
@@ -195,6 +221,9 @@ issue on their own
   "Default cypher to use to fill in a hole in `reval'."
   :type 'symbol
   :options (secure-hash-algorithms))
+
+(defvar reval-cache-directory (concat user-emacs-directory "reval/cache/")
+  "The directory where retrieved .el files are saved.")
 
 (defvar reval-failed-buffer-list nil "List of failed reval buffers.")
 
@@ -278,18 +307,15 @@ for a better workflow."
   (let ((checksum (reval-resum-review cypher (reval-id->buffer path-or-url) reval--make-audit)))
     `(reval ',cypher ',checksum ,path-or-url)))
 
-(defun reval-audit ()
-  "Audit the reval under the cursor."
+(defun reval-audit (&optional universal-argument)
+  "Audit the reval under the cursor." ; FIXME this needs a LOT of work
   (interactive)
-  (save-excursion
-    (re-search-backward "(reval[[:space:]]")
-    (let ((begin (point)))
-      (forward-sexp)
-      (let* ((raw (read (buffer-substring-no-properties begin (point))))
-             (buffer (with-url-handler-mode
-                       (find-file-noselect (elt raw 3))))
-             (checksum (reval-resum (elt raw 1) buffer t)))
-        (eq (elt raw 2) checksum)))))
+  (cl-multiple-value-bind (cypher checksum path-or-url _alternates _b _e) ; FIXME probably loop here
+      (reval--form-at-point)
+    (let* ((buffer (with-url-handler-mode
+                     (find-file-noselect path-or-url)))
+           (buffer-checksum (reval-resum cypher buffer t)))
+      (eq buffer-checksum checksum))))
 
 (defun reval--add-buffer-to-list (buffer buffer-list-name)
   "Add BUFFER to list at BUFFER-LIST-NAME."
@@ -311,6 +337,31 @@ for a better workflow."
                        (delete (current-buffer) (symbol-value buffer-list-name))))
                 nil t))))
 
+(defun reval-cache-path (checksum)
+  "Return the path to the local cache for a given checksum."
+  (let* ((name (symbol-name checksum))
+         (subdir (substring name 0 2)))
+    (concat reval-cache-directory subdir "/" name)))
+
+(defun reval--write-cache (buffer cache-path)
+  "Write BUFFER to CACHE-PATH. Create the parent if it doesn not exist."
+  (let ((parent-path (file-name-directory cache-path)))
+    (unless (file-directory-p parent-path)
+      (make-directory parent-path t))
+    (with-current-buffer buffer
+      (write-file cache-path))))
+
+(defun reval-find-cache (&optional universal-argument)
+  (interactive)
+  (cl-multiple-value-bind (_cypher checksum path-or-url _alternates _b _e)
+      (reval--form-at-point)
+    (let ((cache-path (reval-cache-path checksum)))
+      (if (file-exists-p cache-path)
+          (let ((buffer (find-file-noselect cache-path)))
+            (with-current-buffer buffer (emacs-lisp-mode))
+            (pop-to-buffer-same-window buffer))
+        (error "No cache for %s" path-or-url)))))
+
 (defun reval (cypher checksum path-or-url &rest alternates)
   "Open PATH-OR-URL, match CHECKSUM under CYPHER, then eval.
 If an error is encountered try ALTERNATES in order.
@@ -320,15 +371,21 @@ PATH-OR-URL is to write out expression with CYPHER and CHECKSUM as a
 nonsense values. For example (reval ? ? \"path/to/file.el\"). Then run
 M-x `reval-update-simple' to populate CYPHER and CHECKSUM."
 
-  (let (done)
+  (let (done
+        (cache-path (reval-cache-path checksum)))
     (with-url-handler-mode
-      (cl-loop for path-or-url in (cons path-or-url alternates)
+      (cl-loop for path-or-url in (cons cache-path (cons path-or-url alternates))
                do (if (file-exists-p path-or-url)
                       (let* ((buffer (reval-id->buffer path-or-url))
+                             (_ (when (string= path-or-url cache-path)
+                                  (with-current-buffer buffer (emacs-lisp-mode))))
                              ;; FIXME this is still not right ... can error due to not elisp
                              (buffer-checksum (reval-resum cypher buffer)))
                         (if (eq buffer-checksum checksum)
                             (progn
+                              (unless (string= path-or-url cache-path)
+                                ;; save to cache before eval for xrefs
+                                (reval--write-cache buffer cache-path))
                               (eval-buffer buffer)
                               (reval--add-buffer-to-list buffer 'reval-evaled-buffer-list)
                               (setq done t))
@@ -432,6 +489,30 @@ For example elt 2 of '(reval 'sha256 ? \"file.el\")."
        (consp (cdr thing))
        (symbolp (cadr thing))))
 
+(defun reval--form-at-point ()
+  (save-excursion
+    (re-search-forward " ")
+    (re-search-backward "(reval[[:space:]]")
+    (let ((begin (point)))
+      (forward-sexp)
+      (let ((raw (read (buffer-substring-no-properties begin (point))))
+            (end (point)))
+        ;;(message "aaaaa: %S %S %S" raw (symbolp (elt raw 1)) (type-of (elt raw 1)))
+        (let ((cypher (let ((cy (elt raw 1)))
+                        ;; '(sigh 'sigh) XXX the usual eval dangerzone >_<
+                        (if (reval--dquote-symbolp cy) (eval cy) reval-default-cypher)))
+              (checksum (let ((cs (elt raw 2)))
+                          (if (reval--dquote-symbolp cs) (eval cs) nil)))
+              (path-or-url (elt raw 3))
+              (alternates (cddddr raw)))
+          (values cypher checksum path-or-url alternates begin end))))))
+
+(defun reval-checksum-at-point (&optional universal-argument)
+  (interactive)
+  (cl-multiple-value-bind (_cypher checksum _path-or-url _alternates _b _e)
+      (reval--form-at-point)
+    checksum))
+
 (defun reval-update-simple (&optional universal-argument)
   "Update the checksum for the reval sexp under the cursor or up the page.
 Useful when developing against a local path or a mutable remote id.
@@ -439,28 +520,33 @@ If UNIVERSAL-ARGUMENT is non-nil then `reval-audit' is skipped, please use
 this functionality responsibly."
   (interactive "P")
   (with-url-handler-mode
-    (save-excursion
-      (re-search-backward "(reval[[:space:]]")
-      (let ((begin (point)))
-        (forward-sexp)
-        (let ((raw (read (buffer-substring-no-properties begin (point)))))
-          ;;(message "aaaaa: %S %S %S" raw (symbolp (elt raw 1)) (type-of (elt raw 1)))
-          (let ((cypher (let ((cy (elt raw 1)))
-                          ;; '(sigh 'sigh) XXX the usual eval dangerzone >_<
-                          (if (reval--dquote-symbolp cy) (eval cy) reval-default-cypher)))
-                (checksum (let ((cs (elt raw 2)))
-                            (if (reval--dquote-symbolp cs) (eval cs) nil)))
-                (path-or-url (elt raw 3))
-                (reval--make-audit (not universal-argument)))
-            (unless (memq cypher (secure-hash-algorithms))
-              (error "%S is not a known member of `secure-hash-algorithms'" cypher))
-            (let ((new (reval--make cypher path-or-url))
-                  (print-quoted t)
-                  print-length
-                  print-level)
-              (backward-kill-sexp)
-              (insert (prin1-to-string new)))))))))
+    (let ((reval--make-audit (not universal-argument))
+          (sigh (point)))
+      (cl-multiple-value-bind (cypher checksum path-or-url alternates begin end)
+          (reval--form-at-point)
+        (unless (memq cypher (secure-hash-algorithms))
+          (error "%S is not a known member of `secure-hash-algorithms'" cypher))
+        (let ((new (reval--make cypher path-or-url))
+              (print-quoted t)
+              print-length
+              print-level)
+          (delete-region begin end)
+          (insert (prin1-to-string
+                   (if alternates ; don't cons the old checksum, repeated invocations grow
+                       (append new (cons ''OLD> alternates))
+                     new))))
+        (goto-char sigh)))))
 #+end_src
+
+See https://emacs.stackexchange.com/a/7577 for why we have to manually
+save the position and ~save-excursion~ does nothing in this case.
+
+TODO M-: (insert (package-name--reval-update))
+or rather, the reval-confirm workflow which is
+1. digest a local file or the master url etc.
+2. use reval-header-is-version-of package-name--reval-update
+   to get the immutable url in the buffer for that file
+3. insert the immutable url and check that they match
 
 A little trick in =M-:= ~(insert (prin1-to-string (read (buffer-string))))~.
 
